--- a/index.html
+++ b/index.html
@@ -1,4 +1,65 @@
 <!DOCTYPE html>
 <html>
-  hi
+Pneumocystis Pneumonia (PCP) - Summary of Information 
+
+Summary 
+
+Pneumocystis jirovecii pneumonia (PCP) is an opportunistic fungal lung infection that primarily affects immunocompromised individuals. It is strongly associated with HIV/AIDS but can also occur in patients receiving immunosuppressive therapy, those with malignancies, or individuals with primary immunodeficiency disorders. 
+
+Clinical Features – Observable Signs and Symptoms of Disease 
+
+Progressive dyspnea (shortness of breath) 
+
+Nonproductive cough – cough that does not produce mucus (dry cough) 
+
+Fever 
+
+Hypoxia, which may be disproportionate to clinical findings – low levels of oxygen in body tissues 
+
+Symptoms develop gradually over days to weeks. 
+
+Diagnosis 
+
+Laboratory markers – biochemical or molecular indicators measured using bodily fluids:  
+
+Elevated β-D-glucan (a fungal cell wall component and a polysaccharide (carbohydrate)) 
+
+Increased lactate dehydrogenase (an enzyme found in almost all body tissues) (LDH)  
+
+Imaging (Chest X-ray or CT scan):  
+
+Diffuse bilateral infiltrates (abnormal opacities/ lumps seen in both lungs)(ground-glass appearance) 
+
+Definitive diagnosis:  
+
+Detection of P. jirovecii in induced sputum, bronchoalveolar lavage (BAL), or lung biopsy via:  
+
+Giemsa, Methenamine silver stain, or Immunofluorescence staining – specialized staining techniques used in microbiology and pathology to identify organisms (e.g bacteria, fungi, parasites etc.) 
+
+ 
+
+PCR testing (Polymerase Chain Reaction (PCR) is a molecular technique used to detect and amplify specific DNA or RNA sequences. It is highly sensitive and specific, making it a key tool for diagnosing infectious diseases, genetic disorders, and cancer.) 
+ 
+
+Treatment 
+
+First-line therapy: Trimethoprim/Sulfamethoxazole (TMP/SMX) (high dose) 
+
+Adjunctive therapy: Glucocorticoids (if PaO₂ < 70 mmHg or A-a gradient > 35 mmHg) 
+
+Prophylaxis – Treatment taken to prevent disease 
+
+Indicated for patients with:  
+
+HIV and CD4 < 200 cells/µL 
+
+Other immunocompromised states (e.g., prolonged corticosteroid use) 
+
+Prophylactic regimen: Low-dose TMP/SMX (preferred) 
+
+Ways to treat it 
+
+ The most common treatment is trimethoprim/sulfamethoxazole (TMP/SMX), a medication also known as co-trimoxazole and by several different brand names, i.e. Bactrim, Septra, and Cotrim. This medicine is given by mouth or through a vein for 3 weeks. TMP/SMX can cause side effects such as rash and fever. Other medications are available for patients who cannot take TMP/SMX. Note: Most fungal diseases are treated with antifungal medications. Antibiotics typically are used to treat infections caused by bacteria. Unlike other fungal diseases PCP is treated with an antibiotic and antifungal medications do not work to treat it. 
+
+ 
 </html>
