--- a/index.html
+++ b/index.html
@@ -7,50 +7,61 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f4f7fc;
+            background: linear-gradient(135deg, #6c5ce7, #00b894);
             margin: 0;
             padding: 0;
             color: #333;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
         header {
             background-color: #2c3e50;
             color: white;
-            padding: 20px;
+            padding: 30px;
             text-align: center;
+            border-radius: 15px 15px 0 0;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
         }
         h1 {
             margin: 0;
-            font-size: 2em;
+            font-size: 2.5em;
         }
         .container {
             max-width: 900px;
             margin: 40px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            background-color: white;
+            border-radius: 15px;
+            box-shadow: 0 5px 25px rgba(0, 0, 0, 0.1);
+            transform: translateY(-50px);
+            transition: transform 0.3s ease;
+        }
+        .container:hover {
+            transform: translateY(-20px);
         }
         h2 {
             color: #2c3e50;
-            font-size: 1.5em;
+            font-size: 1.7em;
             margin-top: 20px;
         }
         p {
-            font-size: 1.1em;
+            font-size: 1.2em;
             line-height: 1.6;
             margin: 10px 0;
         }
         ul {
             padding-left: 20px;
             list-style-type: disc;
-            font-size: 1.1em;
+            font-size: 1.2em;
         }
         ul li {
             margin-bottom: 10px;
         }
         .highlight {
-            background-color: #eaf2f8;
-            padding: 5px;
+            background-color: #f0f4f7;
+            padding: 6px;
             border-radius: 4px;
         }
         .section {
@@ -63,10 +74,40 @@
             background-color: #2c3e50;
             color: white;
             text-align: center;
-            padding: 10px 0;
+            padding: 15px;
             position: fixed;
             width: 100%;
             bottom: 0;
+            border-radius: 0 0 15px 15px;
+            box-shadow: 0 -5px 15px rgba(0, 0, 0, 0.1);
+        }
+        /* Button Style for Modern Feel */
+        .btn {
+            background-color: #00b894;
+            color: white;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 25px;
+            font-size: 1.2em;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .btn:hover {
+            background-color: #6c5ce7;
+        }
+        /* Adding animations to headings */
+        h1, h2 {
+            animation: fadeIn 1.2s ease-out;
+        }
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
     </style>
 </head>
